Personnalisation du site

--- a/ProjetFinal/UIL/Views/Home/About.cshtml
+++ b/ProjetFinal/UIL/Views/Home/About.cshtml
@@ -4,6 +4,11 @@
 <h2>@ViewBag.Title.</h2>
 <h3>Le binôme Amin et Jonathan</h3>
 
-<p>Use this area to provide additional information.</p>
+<p>Amin, 34 ans, a obtenu son *INSERT DIPLOMA HERE* à *INSERT UNIVERSITY HERE*. 
+    Il dispose déjà de solides connaissances informatiques, suite à ses études et à une expérience professionnelle en tant que freelance. 
+    Il postule aujourd'hui dans l'entreprise Polymont.</p>
 
-@*TODO : A REMPLIR AVEC NOS INFORMATIONS*@
+<p>Jonathan, 30 ans, a obtenu son diplôme de Master de Biologie, option Imagerie, à l'Université Claude Bernard, de Lyon. 
+    Ayant quelques connaissances de programmation suite à ses études, il débute néanmoins dans l'informatique. 
+    Il postule aujourd'hui dans l'entreprise Netapsys.</p>
+
