--- a/ProjetFinal/UIL/Views/Home/Index.cshtml
+++ b/ProjetFinal/UIL/Views/Home/Index.cshtml
@@ -7,28 +7,27 @@
 
 <div class="jumbotron">
     <h1>Projet WebScraper</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <p class="lead">Le projet WebScraper est un projet innovant, original et techniquement intéressant.</p>
+    <p><a href="~/addNewQuery/manageQueries.cshtml" class="btn btn-primary btn-lg">En savoir plus &raquo;</a></p>
 </div>
 
 <div class="row">
     <div class="col-md-4">
-        <h2>Getting started</h2>
+        <h2>Qui sommes nous ?</h2>
         <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
+            Nous sommes Amin et Jonathan, tous deux stagiaires d'une session de formation DotNet proposée par GT'M Ingenierie et Pôle Emploi.
         </p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+        <p><a class="btn btn-default" href="~/Home/Contact">Nous contacter &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+        <h2>Nos parcours</h2>
+        <p>Jonathan, ancien Biologiste, débute dans l'informatique. Amin suite à des études d'informatique dispose de solide connaissances.</p>
+        <p><a class="btn btn-default" href="~/Home/About">En savoir plus &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+        <h2>Notre projet</h2>
+        <p>Nous avons conçu un WebScraper, un robot qui fouille internet et récupère des données. Nous proposons deux services permettant d'accéder aux résultats du "scraping", stockés dans une base de données.</p>
+        <p><a class="btn btn-default" href="~/addNewQuery/manageQueries">Notre prototype &raquo;</a></p>
     </div>
 </div>
+  
