--- a/ProjetFinal/UIL/Views/Shared/_Layout.cshtml
+++ b/ProjetFinal/UIL/Views/Shared/_Layout.cshtml
@@ -24,10 +24,10 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Accueil", "Index", "Home")</li>
                     <li>@Html.ActionLink("A propos", "About", "Home")</li>
-                    <li>@Html.ActionLink("Gestion", "manageQueries", "addNewQuery")</li>
                     <li>@Html.ActionLink("Nous contacter", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Gestion", "manageQueries", "addNewQuery")</li>
                 </ul>
-                @Html.Partial("_LoginPartial")
+                @*@Html.Partial("_LoginPartial")*@
             </div>
         </div>
     </div>
