--- a/ProjetFinal/UIL/Views/Home/About.cshtml
+++ b/ProjetFinal/UIL/Views/Home/About.cshtml
@@ -4,9 +4,9 @@
 <h2>@ViewBag.Title.</h2>
 <h3>Le binôme Amin et Jonathan</h3>
 
-<p>Amin, 34 ans, a obtenu son *INSERT DIPLOMA HERE* à *INSERT UNIVERSITY HERE*. 
+<p>Amin, 34 ans, a obtenu son diplôme de Master en Informatique à l'INSA, Lyon. 
     Il dispose déjà de solides connaissances informatiques, suite à ses études et à une expérience professionnelle en tant que freelance. 
-    Il postule aujourd'hui dans l'entreprise Polymont.</p>
+    Il postule aujourd'hui dans l'entreprise Polymont IT Services.</p>
 
 <p>Jonathan, 30 ans, a obtenu son diplôme de Master de Biologie, option Imagerie, à l'Université Claude Bernard, de Lyon. 
     Ayant quelques connaissances de programmation suite à ses études, il débute néanmoins dans l'informatique. 
