--- a/ProjetFinal/UIL/Views/Home/Index.cshtml
+++ b/ProjetFinal/UIL/Views/Home/Index.cshtml
@@ -21,7 +21,7 @@
     </div>
     <div class="col-md-4">
         <h2>Nos parcours</h2>
-        <p>Jonathan, ancien Biologiste, débute dans l'informatique. Amin suite à des études d'informatique dispose de solide connaissances.</p>
+        <p>Jonathan, ancien Biologiste, débute dans l'informatique. Amin suite à des études d'informatique dispose de solides connaissances.</p>
         <p><a class="btn btn-default" href="~/Home/About">En savoir plus &raquo;</a></p>
     </div>
     <div class="col-md-4">
